--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Theft Scanner</string>
+    <string name="Title_1">MAP</string>
+    <string name="Subtitle_1">SHOW PLACE MARKERS</string>
+    <string name="Title_2">STATISTICS</string>
+    <string name="Subtitle_2">GET SUMMARY</string>
+    <string name="Tilte_3">THEFT DETAILS</string>
+    <string name="Subtitle_3">READ INFORMATION</string>
+    <string name="Title_4">ADD</string>
+    <string name="Subtitle_4">FILL IN THE FORM</string>
+    <string name="Title_5">HELP</string>
+    <string name="Subtitle_5">READ GUIDE</string>
+    <string name="Title_6">DONATE</string>
+    <string name="Subtitle_6">SUPPORT THE PROJECT</string>
+
 </resources>
