--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,7 @@
     <string name="Subtitle_5">READ GUIDE</string>
     <string name="Title_6">DONATE</string>
     <string name="Subtitle_6">SUPPORT THE PROJECT</string>
+    <string name="Subtitle_Menu">WELCOME</string>
+    <string name="Actionbar_Title_5">Help</string>
 
 </resources>
