Add Profile Card in Menu
+ Delete Help Card in Main
+ Change Grid

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,9 @@
     <string name="Subtitle_3">READ INFORMATION</string>
     <string name="Title_4">ADD</string>
     <string name="Subtitle_4">FILL IN THE FORM</string>
-    <string name="Title_5">HELP</string>
-    <string name="Subtitle_5">READ GUIDE</string>
-    <string name="Title_6">DONATE</string>
+    <string name="Title_5">PROFILE</string>
+    <string name="Subtitle_5">VIEW ACCOUNT</string>
+    <string name="Title_6">SUPPORT THE PROJECT</string>
     <string name="Subtitle_6">SUPPORT THE PROJECT</string>
     <string name="Subtitle_Menu">WELCOME</string>
     <string name="Actionbar_Title_5">Help</string>
