--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,11 @@
     <string name="Subtitle_5">VIEW ACCOUNT</string>
     <string name="Title_6">SUPPORT THE PROJECT</string>
     <string name="Subtitle_6">SUPPORT THE PROJECT</string>
-    <string name="Subtitle_Menu">WELCOME</string>
+    <string name="Subtitle_Menu">DASHBOARD</string>
     <string name="Actionbar_Title_5">Help</string>
     <string name="title_activity_map">Map</string>
     <string name="title_activity_help">Help</string>
     <string name="title_activity_form">Form</string>
+    <string name="title_activity_profile">Profile</string>
 
 </resources>
