--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     <string name="title_activity_help">Help</string>
     <string name="title_activity_form">Form</string>
     <string name="title_activity_profile">Profile</string>
+    <string name="title_activity_statistics">Statistics</string>
 
 </resources>
