--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,18 +4,11 @@
     <string name="Subtitle_1">SHOW PLACE MARKERS</string>
     <string name="Title_2">STATISTICS</string>
     <string name="Subtitle_2">GET SUMMARY</string>
-    <string name="Tilte_3">THEFT DETAILS</string>
+    <string name="Title_3">THEFT DETAILS</string>
     <string name="Subtitle_3">READ INFORMATION</string>
     <string name="Title_4">ADD</string>
     <string name="Subtitle_4">FILL IN THE FORM</string>
-    <string name="Title_5">PROFILE</string>
-    <string name="Subtitle_5">VIEW ACCOUNT</string>
-    <string name="Title_6">SUPPORT THE PROJECT</string>
-    <string name="Subtitle_6">SUPPORT THE PROJECT</string>
     <string name="Subtitle_Menu">DASHBOARD</string>
-    <string name="Actionbar_Title_5">Help</string>
-    <string name="title_activity_map">Map</string>
-    <string name="title_activity_help">Help</string>
     <string name="title_activity_form">Form</string>
     <string name="title_activity_profile">Profile</string>
     <string name="title_activity_statistics">Statistics</string>
