--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,5 @@
     <string name="title_activity_form">Form</string>
     <string name="title_activity_profile">Profile</string>
     <string name="title_activity_statistics">Statistics</string>
-
+    <string name="title_activity_details">Theft Details</string>
 </resources>
