--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="signInUser">LOG IN</string>
     <string name="message_signUp">New user? Create account here</string>
     <string name="message_signIn">Already have an account? Log in here</string>
+    <string name="permission_required_toast">Location permission is required</string>
+    <string name="permission_rationale_location">Access to the location service is required to show your current location on the map</string>
+    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Theft Scanner\'.</string>
 </resources>
